fix(component:textArea): fixed emoji text overlaping

--- a/components/textArea/core/index.scss
+++ b/components/textArea/core/index.scss
@@ -2,18 +2,33 @@
 
 .textAreaContainer {
     position: relative;
-    display: inline;
+    display: inline-flex;
+    flex-direction: column;
 
-    i {
-        position: absolute;
-        left: 24px;
-        bottom: 17px;
-        color: $secondary-dark-2;
+    .icon-container {
+        top: -1px;
+        display: inline-block;
+        position: relative;
+        height: 30px;
+        width: 360px;
+        border: 1px solid $outline;
+        border-top: none;
+        i {
+            position: absolute;
+            left: 21px;
+            bottom: 13px;
+            color: $secondary-dark-2;
+        }
+
+        &.disabled {
+            background: $background-2;
+            border: none;
+        }
     }
 
     textarea {
         width: 360px;
-        height: 90px;
+        height: 60px;
         padding: 16px 18px;
         outline: none;
         @include text-style(14px, $dark-secondary-3);
@@ -21,6 +36,7 @@
             @include text-style(14px, $secondary-dark-2);
         }
         border: 1px solid $outline;
+        border-bottom: none;
         resize: none;
     }
 
